# case-pilar

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
app/: main.py  model.py
app/tests/: test_main.py
tests/: test_main.py
