[tool.poetry]
name = "case"
version = "0.1.0"
description = "Case Pilar para vaga de Software Engineer"
authors = ["Eduardo Alencar <ealencar10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.1"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
